--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "react-scripts app",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint:scss": "node_modules/.bin/stylelint \\\\\\\"**/*.scss\\\\\\\" --fix",
